style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap");

:root {
  /* color variables */
  --bg-color: #252335;
  --primary-color: #b999a3;
  --secondary-color: #a589a0;
  --paused-color: #746571;
}

/* reset user agent styles */
* {
  margin: 0;
  padding: 0;
}

body {
  background: var(--bg-color, #252335);
  display: flex;
  flex-direction: column;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
  padding: 15px;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

.timer {
  justify-self: center;
  align-self: center;
  color: var(--primary-color, #d8b9c3);
  font-size: 13rem;
  font-family: "Roboto", sans-serif;
  border-radius: 50%;
  font-weight: 100;
  transition: color 1000ms;
  margin-top: auto;
}

.bottom-section {
  margin-top: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.bottom-left-texts {
  display: flex;
  gap: 15px;
}

.bottom-left-text {
  text-align: center;
  color: var(--secondary-color, #827397);
  font-size: 1.3rem;
  font-weight: 300;
  text-transform: uppercase;
}

.control-buttons {
  display: flex;
}

.control-btn {
  color: var(--secondary-color);
  padding: 5px;
  border: var(--secondary-color) solid 1px;
  border-radius: 50%;
  height: 20px;
  width: 20px;
  line-height: 0px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 10px;
}

#settings-menu {
  z-index: 2;
  position: absolute;
  background: rgba(0, 0, 0, 0.301);
  height: 100vh;
  width: 100vw;
  box-sizing: border-box;
  margin: -15px;
  display: none;
  opacity: 0;
  justify-content: center;
  align-items: center;
  transition: opacity 400ms;
}

.menu-content {
  max-width: 500px;
  max-height: 600px;
  width: 100%;
  height: 100%;
  overflow-y: auto;
  background-color: var(--bg-color, #252335);
  padding: 30px 60px;
  box-sizing: border-box;
  box-shadow: 3px 3px 3px #000;
  border-radius: 12px;
  /* default styles for childs */
  color: var(--secondary-color, #a589a0);
  font-family: "Roboto", sans-serif;
  font-size: 1.3rem;
  font-weight: 300;
  display: flex;
  flex-direction: column;
}

.menu-title {
  font-weight: 300;
  text-align: center;
  margin-bottom: 30px;
  color: var(--primary-color, #d8b9c3);
}

.settings-option {
  display: flex;
  justify-content: space-between;
  margin-bottom: 15px;
}

.text-input {
  background: none;
  border: none;
  border-bottom: 2px solid var(--secondary-color, #a589a0);
  max-width: 80px;
  color: var(--secondary-color, #a589a0);
  font-weight: 300;
  text-align: right;
  font-size: 1.1rem;
}

.text-input:focus {
  outline: none;
}

.text-input::placeholder {
  color: var(--paused-color, #746571);
}

.checkbox {
  opacity: 0;
  margin-left: auto;
  margin-right: -15px;
  width: 15px;
  height: 15px;
}

.checkbox + .checkbox-box {
  width: 15px;
  height: 15px;
  background: none;
  border: var(--secondary-color, #a589a0) solid 2px;
  border-radius: 5px;
  transition: background 200ms;
}

.checkbox + .checkbox-box::before {
  content: "\f00c";
  font-family: "Font Awesome 5 Free";
  font-weight: 900;
  color: var(--bg-color, #252335);
  font-size: 0.8rem;
  position: relative;
  top: -7px;
  left: 1px;
  pointer-events: none;
}

.checkbox:checked + .checkbox-box {
  background: var(--secondary-color);
}

.menu-buttons {
  display: flex;
  justify-content: flex-end;
  gap: 20px;
  margin-top: auto;
}

.bg-not-filled-button,
.bg-filled-button {
  border: var(--secondary-color, #b999a3) solid 2px;
  padding: 5px;
  width: 100px;
  border-radius: 5px;
  font-size: 1.03rem;
}

.bg-filled-button {
  background: var(--secondary-color, #b999a3);
  color: var(--bg-color, #252335);
}

.bg-not-filled-button {
  background: none;
  color: var(--secondary-color, #b999a3);
}

.color-picker {
  background: none;
  border: none;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.color-picker-bg {
  width: 20px;
  height: 20px;
  background: var(--primary-color);
  border-radius: 50%;
  border: var(--secondary-color) solid 2px;
}

#no-js-error {
  background: #000;
  color: rgb(202, 115, 115);
  position: fixed;
  z-index: 5;
  font-size: 1.5rem;
  opacity: 0;
  animation: show-error 3000ms; /* add delay before showing because loading Js might take time on slow network*/
  animation-fill-mode: forwards;
}

@keyframes show-error {
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.top-section {
  display: flex;
  justify-content: space-between;
}

.local-time {
  color: var(--secondary-color);
  font-size: 1.3rem;
  font-weight: 300;
}

.logo-text {
  color: var(--secondary-color);
  font-weight: 300;
  text-transform: uppercase;
}

.time-end {
  color: var(--secondary-color);
  font-size: 1.8rem;
  font-weight: 300;
  margin-top: calc(50vh - 11rem);
  opacity: 0;
  transition: opacity 300ms;
  display: none;
}

.time-end-wraper {
  position: absolute;
  width: 100%;
  text-align: center;
}

/* responsive */
@media (max-width: 590px) {
  .timer {
    font-size: 8rem;
  }
  .time-end {
    margin-top: calc(50vh - 8rem);
  }
}

@media (max-width: 610px) {
  .time-end {
    font-size: 1.4rem;
  }
}

/* main mobile view */
@media (max-width: 510px) {
  body {
    padding: 20px;
  }
  /* align buttons vertically */
  .control-buttons {
    flex-direction: column;
    gap: 10px;
    position: absolute;
    bottom: 20px;
    right: 20px;
  }
}

@media (max-width: 400px) {
  .timer {
    font-size: 6rem;
  }
}

